Improve OpenAPI specs
